# qscintilla

src/: CMakeLists.txt
